--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "gatsby-remark-prismjs": "^2.0.1",
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.40",
+    "handlebars": "^4.1.2",
+    "lodash": "^4.17.14",
+    "lodash-es": "^4.17.14",
+    "lodash.merge": "^4.6.2",
+    "lodash.mergewith": "^4.6.2",
+    "lodash.template": "^4.5.0",
+    "mem": "^5.1.1",
     "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
     "reactstrap": "5.*"
