--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.40",
     "handlebars": "^4.1.2",
-    "lodash": "^4.17.14",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.13",
     "lodash-es": "^4.17.14",
     "lodash.merge": "^4.6.2",
     "lodash.mergewith": "^4.6.2",
     "lodash.template": "^4.5.0",
     "mem": "^5.1.1",
+    "open": "^6.0.0",
     "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
-    "reactstrap": "5.*"
+    "reactstrap": "5.*",
+    "serve-handler": "^5.0.3",
+    "webpack-dev-server": "^3.1.11"
   },
   "keywords": [
     "gatsby",
